--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <title>Home | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css?v=1.4">
-    <link rel="stylesheet" href="css/responsive.css?v=1.4">
+    <link rel="stylesheet" href="css/style.css?v=1.5">
+    <link rel="stylesheet" href="css/responsive.css?v=1.5">
 </head>
 <body>
     <!-- -------Whatsapp-float------ -->
@@ -34,10 +34,10 @@
         </div>
         <div class="offcanvas-body">
             <nav class="menu-mobile">
-                <a href="index.html" class="link-mobile"><i class="fa-solid fa-caret-right"></i>Inicio</a>
-                <a href="quienes-somos.html" class="link-mobile"><i class="fa-solid fa-caret-right"></i>Qué es Aymsa</a>
-                <a href="portafolio.html" class="link-mobile"><i class="fa-solid fa-caret-right"></i>Portafolio de servicios</a>
-                <a href="#" class="link-mobile"><i class="fa-solid fa-caret-right"></i>Portal clientes</a>
+                <a href="index.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Inicio</a>
+                <a href="quienes-somos.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Qué es Aymsa</a>
+                <a href="portafolio.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Portafolio de servicios</a>
+                <a href="#" class="link-mobile"><i class="fa-solid fa-circle"></i>Portal clientes</a>
             </nav>
             <div class="contact-header contact-mobile">
                 <div class="item-contact">
@@ -154,7 +154,7 @@
                                 <h2 class="subtitle-box">Servicio integral de <br> <span class="bold-box">Talento Humano</span></h2>
                                 <p>Somos una compañía especializada en tercerización de servicios integrales de 
                                     Talento Humano que provee soluciones y genera valor a su Negocio.</p>
-                                <a href="#" class="btn-box">Conoce nuestro portafolio</a>
+                                <a href="portafolio.html" class="btn-box">Conoce nuestro portafolio</a>
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                                 <h2 class="subtitle-box">Servicio integral de <br> <span class="bold-box">Talento Humano</span></h2>
                                 <p>Somos una compañía especializada en tercerización de servicios integrales de 
                                     Talento Humano que provee soluciones y genera valor a su Negocio.</p>
-                                <a href="#" class="btn-box">Conoce nuestro portafolio</a>
+                                <a href="portafolio.html" class="btn-box">Conoce nuestro portafolio</a>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                     <div class="text-card">
                         <h2 class="title-card">Atracción de personal</h2>
                         <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                        <a href="#" class="btn-card">Conoce más</a>
+                        <a href="portafolio.html" class="btn-card">Conoce más</a>
                     </div>
                 </div>
                 <div class="card-serv">
@@ -199,9 +199,9 @@
                         <img src="img/wallp-02.jpg" alt="">
                     </div>
                     <div class="text-card">
-                        <h2 class="title-card">Atracción de personal</h2>
-                        <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                        <a href="#" class="btn-card">Conoce más</a>
+                        <h2 class="title-card">Selección de personal</h2>
+                        <p> Efectuamos procesos de selección en línea con pruebas automatizadas que evalúan los perfiles y competencia</p>
+                        <a href="portafolio.html" class="btn-card">Conoce más</a>
                     </div>
                 </div>
                 <div class="card-serv">
@@ -209,9 +209,9 @@
                         <img src="img/wallp-03.jpg" alt="">
                     </div>
                     <div class="text-card">
-                        <h2 class="title-card">Atracción de personal</h2>
-                        <p>Realizamos el proceso de atracción y búsqueda de candidatos mediante el uso de herramientas tecnológicas</p>
-                        <a href="#" class="btn-card">Conoce más</a>
+                        <h2 class="title-card">Contratación de personal</h2>
+                        <p>Apoyamos en el proceso de vinculación y desvinculación de sus colaboradores</p>
+                        <a href="portafolio.html" class="btn-card">Conoce más</a>
                     </div>
                 </div>
             </div>
