--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -17,8 +17,8 @@
 
     <title>¿Quiénes somos? | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css?v=1.4">
-    <link rel="stylesheet" href="css/responsive.css?v=1.4">
+    <link rel="stylesheet" href="css/style.css?v=1.5">
+    <link rel="stylesheet" href="css/responsive.css?v=1.5">
 </head>
 <body>
 
@@ -35,10 +35,10 @@
         </div>
         <div class="offcanvas-body">
             <nav class="menu-mobile">
-                <a href="index.html" class="link-mobile"><i class="fa-solid fa-caret-right"></i>Inicio</a>
-                <a href="quienes-somos.html" class="link-mobile"><i class="fa-solid fa-caret-right"></i>Qué es Aymsa</a>
-                <a href="portafolio.html" class="link-mobile"><i class="fa-solid fa-caret-right"></i>Portafolio de servicios</a>
-                <a href="#" class="link-mobile"><i class="fa-solid fa-caret-right"></i>Portal clientes</a>
+                <a href="index.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Inicio</a>
+                <a href="quienes-somos.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Qué es Aymsa</a>
+                <a href="portafolio.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Portafolio de servicios</a>
+                <a href="#" class="link-mobile"><i class="fa-solid fa-circle"></i>Portal clientes</a>
             </nav>
             <div class="contact-header contact-mobile">
                 <div class="item-contact">
@@ -188,7 +188,7 @@
                 </div>
                 <div class="item-vis">
                     <div class="icon-vis">
-                        <img src="img/manos.svg" alt="">
+                        <img src="img/valores.png" alt="">
                         <h2 class="title-vis">Valores</h2>
                     </div>
                     <div class="text-vis">
