--- a/portafolio.html
+++ b/portafolio.html
@@ -17,8 +17,8 @@
 
     <title>Portafolio | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css?v=1.7">
-    <link rel="stylesheet" href="css/responsive.css?v=1.7">
+    <link rel="stylesheet" href="css/style.css?v=1.8">
+    <link rel="stylesheet" href="css/responsive.css?v=1.8">
 </head>
 <body>
 
@@ -132,7 +132,7 @@
             <div class="content-bot">
                 <nav class="navigator">
                     <a href="index.html" class="link-navi">Inicio</a>
-                    <a href="quienes-somos.html" class="link-navi">Qué es Aymsa</a>
+                    <a href="quienes-somos.html" class="link-navi">Quiénes somos</a>
                     <a href="portafolio.html" class="link-navi link-active">Portafolio de servicios</a>
                     <a href="#" class="link-navi">Portal clientes</a>
                 </nav>
