--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <title>Home | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css?v=1.8">
-    <link rel="stylesheet" href="css/responsive.css?v=1.8">
+    <link rel="stylesheet" href="css/style.css?v=1.9">
+    <link rel="stylesheet" href="css/responsive.css?v=1.9">
 </head>
 <body>
     <!-- -------Whatsapp-float------ -->
@@ -80,7 +80,7 @@
       </div>
 
     <!-- -------Header-------- -->
-    <div class="header">
+    <header class="header">
         <div class="content-header">
             <div class="top-header">
                 <div class="logo-header">
@@ -141,7 +141,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
 
     <!-- ------Cover------- -->
     <div class="cover">
@@ -370,7 +370,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-    <script src="js/carousel-cover.js"></script>
-    <script src="js/carousel-test.js"></script>
+    <script src="js/carousel-cover.js?v=1.1"></script>
+    <script src="js/carousel-test.js?v=1.1"></script>
+    <script src="js/header-sticky.js?v=1.1"></script>
 </body>
 </html>
