--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <title>Home | Aymsa</title>
 
-    <link rel="stylesheet" href="css/style.css?v=1.9">
-    <link rel="stylesheet" href="css/responsive.css?v=1.9">
+    <link rel="stylesheet" href="css/style.css?v=1.10">
+    <link rel="stylesheet" href="css/responsive.css?v=1.10">
 </head>
 <body>
     <!-- -------Whatsapp-float------ -->
     <div class="what-float">
-        <a href="#" class="icon-what"><img src="img/whatsApp.png" alt=""></a>
+        <a href="https://wa.me/ 573138700607" class="icon-what"><img src="img/whatsApp.png" alt=""></a>
     </div>
 
     <!-- -------Offcanvas----- -->      
@@ -37,7 +37,7 @@
                 <a href="index.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Inicio</a>
                 <a href="quienes-somos.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Qué es Aymsa</a>
                 <a href="portafolio.html" class="link-mobile"><i class="fa-solid fa-circle"></i>Portafolio de servicios</a>
-                <a href="#" class="link-mobile"><i class="fa-solid fa-circle"></i>Portal clientes</a>
+                <a href="https://empleamos_est.midasoft.co/NGMidasoft/login/AI" class="link-mobile"><i class="fa-solid fa-circle"></i>Portal clientes</a>
             </nav>
             <div class="contact-header contact-mobile">
                 <div class="item-contact">
@@ -66,16 +66,16 @@
                     </div>
                     <div class="text-contact">
                         <h3 class="title-contact">Contacto</h3>
-                        <p>info@aymsa.com</p>
-                        <p>+57 340 985995</p>
+                        <p>contacto@aymsa.co</p>
+                        <p>+57 313 8700607</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="social-mobile">
-            <a href="#" class="icon-mob"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" class="icon-mob"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#" class="icon-mob"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100092608227611" class="icon-mob"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/aymsas.a.s/?igshid=YmM0MjE2YWMzOA%3D%3D" class="icon-mob"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://twitter.com/home" class="icon-mob"><i class="fa-brands fa-twitter"></i></a>
         </div>
       </div>
 
@@ -120,8 +120,8 @@
                         </div>
                         <div class="text-contact">
                             <h3 class="title-contact">Contacto</h3>
-                            <p>info@aymsa.com</p>
-                            <p>+57 340 985995</p>
+                            <p>contacto@aymsa.co</p>
+                            <p>+57 313 8700607</p>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <a href="index.html" class="link-navi link-active">Inicio</a>
                     <a href="quienes-somos.html" class="link-navi">Qué es Aymsa</a>
                     <a href="portafolio.html" class="link-navi">Portafolio de servicios</a>
-                    <a href="#" class="link-navi">Portal clientes</a>
+                    <a href="https://empleamos_est.midasoft.co/NGMidasoft/login/AI" class="link-navi">Portal clientes</a>
                 </nav>
                 <div class="search-header">
                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -243,7 +243,7 @@
     </div>
 
     <!-- ------Mod-if------- -->
-    <div class="if if-min">
+    <!-- <div class="if if-min">
         <div class="content-if">
             <div class="head-global">
                 <h2 class="title-global">Acompañamos a nuestros clientes</h2>
@@ -279,7 +279,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- ------Mod-if----- -->
     <div class="if x-grey if-back if-min">
@@ -329,30 +329,24 @@
     <!-- -------Footer------ -->
     <footer class="footer">
         <div class="content-footer">
-            <div class="left-footer">
-                <div class="col-footer">
-                    <h2 class="title-col">Nuestra cultura</h2>
-                    <a href="#" class="link-footer">Política de calidad</a>
-                    <a href="#" class="link-footer">Visión y misión organizacional</a>
-                </div>
-                <div class="col-footer">
-                    <h2 class="title-col">Soporte y ayuda</h2>
-                    <a href="#" class="link-footer">Mesa de ayuda</a>
-                    <a href="#" class="link-footer">Asesor tecnológico</a>
-                </div>
-                <div class="col-footer">
+            <div class="col-footer">
+                <div class="item-col">
                     <h2 class="title-col">Contacto</h2>
+                </div>
+                <div class="item-col">
                     <p>Email: Contacto@Aymsa.Co</p>
-                    <p>Celular: 313 870 0607</p>
-                    <p>Whatsapp: 313 870 0607</p>
+                    <p>Celular: 313 8700607</p>
+                    <p>Celular: 313 8700607</p>
                 </div>
             </div>
-            <div class="aymsa-footer">
+            <div class="col-footer">
                 <img src="img/logo-aymsa-white.png" alt="">
+            </div>
+            <div class="col-footer">
                 <div class="social-footer">
-                    <a href="#" class="icon-social"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" class="icon-social"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="icon-social"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100092608227611" class="icon-social"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/aymsas.a.s/?igshid=YmM0MjE2YWMzOA%3D%3D" class="icon-social"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitter.com/home" class="icon-social"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
         </div>
